change project name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "text-neigh"
+name = "papagaio"
 version = "0.1.0"
 authors = ["Tiago Carvalho <sugoiuguu@tfwno.gf>"]
 edition = "2018"
